<resources>
    <string name="app_name">Shayri App</string>
    <string name="shayari">Shayari</string>
    <string name="category">Category</string>
    <string name="home">Home</string>
    <string name="more">More</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="setting">Setting</string>
    <string name="tomCruise">Tom Cruse</string>
    <string name="tomCruiseId">tomcruse23@gmail.com</string>
</resources>