<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_230sdp"
    android:layout_height="match_parent"
    android:layout_gravity="start">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:background="@color/lightBlue"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">


        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/_55sdp"
            android:layout_height="@dimen/_55sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:src="@drawable/profile"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tomCruise"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tomCruiseId"
            android:textSize="@dimen/_12ssp"/>

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:id="@+id/txtHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp"/>

        <LinearLayout
            android:background="@color/black"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>

    <TextView
        android:id="@+id/txtShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp"/>

        <LinearLayout
            android:background="@color/black"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>

    <TextView
        android:id="@+id/txtRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp"/>

        <LinearLayout
            android:background="@color/black"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>

    <TextView
        android:id="@+id/txtSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp"/>



    </LinearLayout>


</LinearLayout>

</LinearLayout>